2004-06-02  Reiner Steib  <Reiner.Steib@gmx.de>

	* mail-source.el (mail-source-directory): Fix doc-string.

2004-05-29  Teodor Zlatanov  <tzz@lifelogs.com>

	* assistant.el (assistant-render-text, assistant-eval): add :set
	widget type, which is different because it takes and returns a
	list.  Much hilarity ensues.

2004-05-28  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-art.el (gnus-button-alist): Fixed regexp for manual links.

	* gnus-group.el (gnus-group-get-new-news-this-group): Added
	doc-string.

	* gnus-start.el (gnus-activate-group): Added doc-string.

2004-05-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-encode.el (mm-safer-encoding): Consider 7bit is safe.

2004-05-27  Teodor Zlatanov  <tzz@lifelogs.com>

	* assistant.el (assistant-render-text): trying to add a :set
	widget, more to come...

	* spam.el (spam-group-spam-contents-p): handle empty groupname
	strings
	(spam-report-articles-resend)
	(spam-report-resend-register-routine): allow spam-report-resend-to
	to be a group parameter or a global value
	(tiny change).  From Daniel Pittman <daniel@rimspace.net>.
	(spam-register-routine): do registration iff any articles warrant
	it.
	(spam-summary-prepare-exit): changed log message for nil group
	destinations 

2004-05-26  Simon Josefsson  <jas@extundo.com>

	* starttls.el: Merge with my GNUTLS based starttls.el.
	(starttls-gnutls-program, starttls-use-gnutls)
	(starttls-extra-arguments, starttls-process-connection-type)
	(starttls-connect, starttls-failure, starttls-success): New
	variables.
	(starttls-program, starttls-extra-args): Doc fix.
	(starttls-negotiate-gnutls, starttls-open-stream-gnutls): New
	functions.
	(starttls-negotiate, starttls-open-stream): Check
	`starttls-use-gnutls' and pass on to corresponding *-gnutls
	function if it is set.

2004-05-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* rfc2047.el (rfc2047-encode-region): Encode encoded words in
	structured fields.

2004-05-26  Katsumi Yamaoka  <yamaoka@jpl.org>
